--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkWise</title>
@@ -12,7 +13,7 @@
             <img src="fakelogo.png" alt="..." height="500",width="500">
         </div>
         <div>
-            <button type="button" class="btn btn-dark"><a href="pomo.html">CLICK ME  !!!</button>
+            <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="pomo.html" style="color: black;">CLICK ME  !!!</button>
         </div>
     </div>
 </body>
