--- a/pomo.html
+++ b/pomo.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pomodoro Timer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="container">
+    <h1>Pomodoro Timer</h1>
+    <div id="timer">
+      <div id="time">25:00</div>
+      <button id="startButton">Start</button>
+      <button id="resetButton">Reset</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
