--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div>
             <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="pomo.html" style="color: black;">CLICK ME !!!</button>
+            <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="pomo.html" style="color: black;">CLICK ME !!!</button>
         </div>
     </div>
 </body>
