--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="pomo.html" style="color: black;">pomodoro</button>
-            <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="todolist.html" style="color: black;">To do list</button>
+            <button style="background-color: lightskyblue;" class="btnbtn-dark"><a href="todo.html" style="color: black;">To do list</button>
         </div>
     </div>
 </body>
